Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-267

SHOW EXPLAIN: Server crashes in JOIN::print_explain on most of queries

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • None
    • 10.0.0
    • None
    • None

    Description

       
      #2  0x00000000008678c8 in handle_fatal_signal (sig=11) at signal_handler.cc:272
      #3  <signal handler called>
      #4  0x0000000000781b92 in JOIN::print_explain (this=0x3bc4030, result=0x3b92b08, explain_flags=0 '\000', on_the_fly=true, need_tmp_table=false, need_order=false, distinct=false, message=0x0) at sql_select.cc:21247
      #5  0x00000000005ae59f in st_select_lex::print_explain (this=0x3bb8908, output=0x3b92b08, explain_flags=0 '\000') at sql_lex.cc:3759
      #6  0x00000000005ae70b in st_select_lex_unit::print_explain (this=0x3bb8400, output=0x3b92b08, explain_flags=0 '\000') at sql_lex.cc:3809
      #7  0x00000000006a4161 in Show_explain_request::get_explain_data (arg=0x7f8827d5cbb0) at sql_class.cc:3042
      #8  0x000000000093d25a in Apc_target::process_apc_requests (this=0x3bb8170) at my_apc.cc:255
      #9  0x000000000093cc3e in Apc_target::disable (this=0x3bb8170) at my_apc.cc:83
      #10 0x0000000000751350 in JOIN::exec (this=0x3bc4030) at sql_select.cc:2134
      #11 0x00000000007548bd in mysql_select (thd=0x3bb5e58, rref_pointer_array=0x3bb8b60, tables=0x0, wild_num=0, fields=..., conds=0x0, og_num=0, order=0x0, group=0x0, having=0x0, proc_param=0x0, select_options=2147764736, result=0x3bc4010, unit=0x3bb8400, select_lex=0x3bb8908) at sql_select.cc:3031
      #12 0x000000000074b2be in handle_select (thd=0x3bb5e58, lex=0x3bb8360, result=0x3bc4010, setup_tables_done_option=0) at sql_select.cc:332
      #13 0x00000000006d7fa0 in execute_sqlcom_select (thd=0x3bb5e58, all_tables=0x0) at sql_parse.cc:5178
      #14 0x00000000006cebef in mysql_execute_command (thd=0x3bb5e58) at sql_parse.cc:2285
      #15 0x00000000006daa08 in mysql_parse (thd=0x3bb5e58, rawbuf=0x3bc3d30 "SELECT SLEEP(1)", length=15, found_semicolon=0x7f8827d157e8) at sql_parse.cc:6179
      #16 0x00000000006cc35f in dispatch_command (command=COM_QUERY, thd=0x3bb5e58, packet=0x3bb95a9 "", packet_length=16) at sql_parse.cc:1229
      #17 0x00000000006cb646 in do_command (thd=0x3bb5e58) at sql_parse.cc:924
      #18 0x00000000006c84d4 in handle_one_connection (arg=0x3bb5e58) at sql_connect.cc:1218
      #19 0x00007f8831566efc in start_thread (arg=0x7f8827d16700) at pthread_create.c:304

      bzr version-info

      revision-id: psergey@askmonty.org-20120511141306-kq3zjcm7vl7jju6n
      date: 2012-05-11 18:13:06 +0400
      build-date: 2012-05-12 06:59:29 +0400
      revno: 3509

      Test case:

      --connect (con1,localhost,root,,)
      --let $con_id = `SELECT CONNECTION_ID()`
      --send SELECT SLEEP(1);
       
      --connection default
      --eval SHOW EXPLAIN FOR $con_id
       
      --connection con1
      --reap
       

      Attachments

        Issue Links

          Activity

            People

              psergei Sergei Petrunia
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 2.5h
                  2.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.