MDEV-267: SHOW EXPLAIN: Server crashes in JOIN::print_explain on most of queries - Make SHOW EXPLAIN code handle degenerate subquery cases (No tables, impossible where, etc)